--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: fastify-hello-world-example
+    name: fastify-project
     runtime: node
-    plan: free
+    plan: starter
     autoDeploy: true
     buildCommand: yarn
     startCommand: node app.js
