--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "fastify-hello-world",
+  "name": "convai-twilio-js",
   "version": "1.0.0",
-  "description": "A Fastify example to deploy to Render",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/render-examples/fastify-hello-world.git"
-  },
-  "author": "",
+  "author": "ElevenLabs",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/render-examples/fastify-hello-world/issues"
-  },
-  "homepage": "https://github.com/render-examples/fastify-hello-world#readme",
+  "description": "",
+  "type": "commonjs",
   "dependencies": {
-    "fastify": "^4.17.0"
-  },
-  "engines": {
-    "node": "18.x"
+    "@fastify/formbody": "^8.0.1",
+    "@fastify/websocket": "^11.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "express-ws": "^5.0.2",
+    "fastify": "^5.1.0",
+    "ws": "^8.18.0"
   }
 }
